# snet-minting-policy-v2

./: .gitignore  README.md
code/: Token.cabal  cabal.project  package-lock.json  package.json
code/src/: Token.hs  offchain.ts
